[unrated] Title: 명예의 전당 (1), Time: 0.42 ms, Memory: 77.6 MB -BaekjoonHub