@@ -1,18 +1,18 @@
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.LinkedList;
 
 class Solution {
     public int[] solution(int k, int[] score) {
         int[] answer = new int[score.length];
-        ArrayList<Integer> list = new ArrayList<>();
+        LinkedList<Integer> list = new LinkedList<>();
 
-        for (int i = 0; i < score.length; i++) {
-            list.add(score[i]);
-
+        for (int i = 0; i < answer.length; i++) {
+            list.addFirst(score[i]);
             Collections.sort(list, Collections.reverseOrder());
 
             if (list.size() < k) {
-                answer[i] = list.get(list.size() - 1);
+                answer[i] = list.getLast();
             } else {
                 answer[i] = list.get(k - 1);
             }
